# shorelark

./: Cargo.toml  LICENSE  LICENSE.md  README.md
.github/workflows/: cargo-llvm-cov.yml  codeql-analysis.yml  grovc.yml  rust.yml
libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/benches/: genetic_benchmark.rs
libs/genetic-algorithm/src/: chromosome.rs  crossover.rs  individual.rs  lib.rs  mutation.rs  selection.rs  statistics.rs
libs/genetic-algorithm/src/crossover/: uniform.rs
libs/genetic-algorithm/src/mutation/: guassian.rs
libs/genetic-algorithm/src/selection/: roulette_wheel.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: layer.rs  layer_topology.rs  lib.rs  neuron.rs
libs/simulation/: Cargo.toml
libs/simulation-wasm/: Cargo.toml
libs/simulation-wasm/src/: animal.rs  lib.rs  world.rs
libs/simulation/src/: animal.rs  animal_individual.rs  brain.rs  eye.rs  food.rs  lib.rs  world.rs
www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
