[package]
name = "lib-genetic-algorithm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maplit = "1.0.2"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5.0"
rand_chacha = "0.3.1"
approx = "0.5.1"

[[bench]]
name = "genetic_benchmark"
harness = false