[package]
name = "lib-simulation-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.133", features = ["derive"] }
rand = "0.8.4"
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
getrandom = { version = "0.2.3", features = ["js"] }

lib-simulation = { path = "../simulation" }
